# DataAI

./: .env.example  .env.studio  .gitattributes  .gitignore  AGENT_VAULT_QUICK_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_MANIFEST.md  AS_IS_TERMS.md  AUDIT_LOGGING_INTEGRATION_GUIDE.md  ArcticCodexRoadMap.md  BUYER_DELIVERY_CHECKLIST.md  CASCADE_BUDGET_STRATEGY.md  COMMANDS_CHEAT_SHEET.md  COMPLETE_PROJECT_STATE.md  DATA_PROVENANCE.md  DELIVERY_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DILIGENCE_TEST_LOGS_2025-12-21.txt  DILIGENCE_TEST_LOG_2025-12-21.md  DISTILLATION_COMPLETE_GUIDE.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_MAP.md  Dockerfile  Dockerfile.fly-prod  ELEVATOR_PITCH.md  ENTERPRISE_UPGRADE_SUMMARY.md  EXECUTIVE_SUMMARY.md  EXECUTIVE_SUMMARY_PRODUCT_PIVOT.md  HYBRID_WORKFLOW.md  IMPLEMENTATION_CHECKLIST_COMPLETE.md  IMPLEMENTATION_STATUS.md  LICENSE  MILESTONE_STATUS.md  PHASES_VI_X_IMPLEMENTATION.md  PHASES_VI_X_QUICKSTART.md  PHASES_XIII_XVII_STATUS.md  PHASE_1_BEFORE_AND_AFTER.md  PHASE_1_COMPLETION_REPORT.md  PHASE_1_DEPLOYMENT_VERIFICATION.md  PHASE_1_DOCUMENTATION_INDEX.md  (+69 more)
.github/workflows/: build-arctic-site.yml  codeql.yml
ForgeNumerics_Language/: ForgeNumerics_Grammar.ebnf  ForgeNumerics_Trinary_Spec_v2 (1).md  PRODUCTION_READY.md  README.md  README_CLI.md  README_PRODUCTION.md  config.yml  run_tests.py  symbols.txt  test_cli_commands.py  test_frame.txt
ForgeNumerics_Language/docs/: learning_tasks.md  meta_layer_guide.md
ForgeNumerics_Language/out2/: Compaction_Test.blob_t.gzip.txt  Compaction_Test.blob_t.zlib.txt  Compaction_Test.frame.gzip.txt
ForgeNumerics_Language/out_curriculum/: forge_curriculum_basic.txt  forge_curriculum_full.json  forge_curriculum_full.txt
ForgeNumerics_Language/out_new/: Compaction_Test.blob_t.gzip.txt  Compaction_Test.frame.gzip.txt
ForgeNumerics_Language/scripts/: compare_blob_zlib.py  run_blob_roundtrip.py
ForgeNumerics_Language/src/: canonicalize.py  cli.py  compaction.py  context_builder.py  conversation_cache.py  curriculum.py  data_loader.py  determinism.py  embeddings.py  errors.py  extdict.py  (+10 more)
arctic-site/: INTEGRATION_README.md  deploy_vercel.ps1  package-lock.json  package.json
assets/: LOGO_SPECIFICATION.md  logo_ascii.txt
data/: seed.jsonl  sft.jsonl  train.jsonl
docs/: ADMIN_GUIDE.md  ARCHITECTURE_AUDIT.md  AUDIT_GUIDE.md  COMPLETE_VISION.md  FINAL_CHECKLIST.md  MA_COMPLETE_PACKAGE.md  MA_INDEX.md  MA_QUICK_REFERENCE.md  MA_TECHNICAL_ARTIFACTS.md  PHASES_INTEGRATION_SUMMARY.md  POLICY_GUIDE.md  PROJECT_OMEGA_COMPLETE.md  SBOM.json  SECURITY.md  STATUS_PROGRESS.md  TIER1_ROADMAP.md  VALUATION_LOCK_PROOFS.md  architecture_diagram.mmd  architecture_spec.md  architecture_spec_skeleton.md  eval_report_sample.md  eval_reporting_template.md  gtm_pricing_metrics.md  legal_ip_checklist.md  metrics_dashboard_spec.md  model_cards.md  model_strategy_costs.md  operations_runbook.md  product_one_pager.md  replay_scripts.md  sbom_plan.md  test_program_plan.md  training_runbook.md  valuation_narrative.md  valuation_package_index.md
handoff/: ACQUIRE_LISTING.md  ARCHITECTURE_OVERVIEW.md  ASSET_INVENTORY.md  CURRICULUM_AND_CORPUS.md  DATA_ROOM_INDEX.md  IP_TRANSFER_CHECKLIST.md  README.md  RUNBOOK_INSTALL_VERIFY.md  STRATEGIC_BRIEF.md  TEST_PROOFS.md  WEBSITE_DEPLOYMENT.md  pytest_collect_2025-12-21.txt
training/: deepspeed_zero3_2xH100.json  train_student.py  wiki_clean_minimal.py  wiki_extract_minimal.py
(+68 files in other folders)
